<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PreferenceDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	
	<string name="setting_title">Settings</string>
	<string name="setting_wireles0network_title">Wireless&#160;&amp;&#160;networks</string>
	
    <string name="setting_wifi_key">pref_key_wifi</string>
    <string name="setting_wifi_title">Wi-Fi</string>
    
    <string name="setting_bluetooth_key">pref_key_bluetooth</string>
    <string name="setting_bluetooth_title">Bluetooth</string>
    
    <string name="setting_datausage_key">pref_key_datausage</string>
    <string name="setting_datausage_title">Data usage</string>
    
    <string name="setting_nfc_key">pref_key_nfc</string>
    <string name="setting_nfc_title">NFC&#160;&amp;&#160;more</string>
    
    <string name="setting_device_title">Device</string>
    
    <string name="setting_sound_key">pref_key_sound</string>
    <string name="setting_sound_title">Sound</string>
    
    <string name="setting_voice_key">pref_key_voice</string>
    <string name="setting_voice_title">Voice</string>
    
    <string name="setting_display_key">pref_key_display</string>
    <string name="setting_display_title">Display</string>
    
    <string name="setting_battery_key">pref_key_battery</string>
    <string name="setting_battery_title">Battery</string>
    
    <string name="setting_date_key">pref_key_date</string>
    <string name="setting_date_title">Date</string>
    
    <string name="setting_others">Others</string>
    
    <string name="setting_recover_title">恢复设置</string>
    <string name="setting_recover_key">pref_key_recover</string>
    
      <string name="pref_key_huanqi_setting">pref_key_huanqi_setting</string>
    <string name="pref_key_huanqi_time">pref_key_huanqi_time</string>
    
    <string name="pref_key_smartlink_setting">pref_key_smartlink_setting</string>
    <string name="pref_key_smartlink_zaoju_open">pref_key_smartlink_zaoju_open</string>
    <string name="pref_key_smartlink_yanji_level">pref_key_smartlink_yanji_level</string>
    <string name="pref_key_smartlink_zaoju_close">pref_key_smartlink_zaoju_close</string>
    <string name="pref_key_smartlink_yanjin_fengliang">pref_key_smartlink_yanji_fengliang</string>
    
    <string name="pref_key_other_setting">pref_key_other_setting</string>
    <string name="pref_key_other_yanji_check_safe">pref_key_other_yanji_check_safe</string>
    <string name="pref_key_other_yanji_protect_record">pref_key_other_yanji_protect_record</string>
    <string name="pref_key_other_yanji_someone_call">pref_key_other_yanji_protect_record</string>
    
    <string name="pref_key_tips_and_share_setting">pref_key_tips_and_share_setting</string>
    <string name="pref_key_tips_and_share_dinner">pref_key_tips_and_share_dinner</string>
    <string name="pref_key_tips_and_share_dinner_content">pref_key_tips_and_share_dinner_content</string>
    <string name="pref_key_tips_and_share_use_message">pref_key_tips_and_share_use_message</string>
    <string name="pref_key_tips_and_share_close_fire">pref_key_tips_and_share_close_fire</string>
</resources>
