<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory 
        android:key="@string/pref_key_huanqi_setting"
        android:title="换气设置"
        android:layout="@layout/preference_category">
		<ListPreference 
		   android:key="@string/pref_key_huanqi_time"
		   android:title="未设定日期"
		   android:layout="@layout/preference_arrow"/>
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:key="@string/pref_key_smartlink_setting"
        android:title="灶具联动"
         android:layout="@layout/preference_category">
        <CheckBoxPreference 
            android:defaultValue="false"
            android:key="@string/pref_key_smartlink_zaoju_open"
            android:title="灶具打开，油烟机自动开启一档"
            android:layout="@layout/preference_checkbox"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_key_smartlink_yanji_level"
            android:title="油烟机档位自动和灶具档位对应"
             android:layout="@layout/preference_checkbox"/>
        <CheckBoxPreference 
            android:defaultValue="false"
            android:key="@string/pref_key_smartlink_zaoju_close"
            android:title="灶具关闭，油烟机延时关闭"
             android:layout="@layout/preference_checkbox"/>
        <CheckBoxPreference 
            android:defaultValue="false"
            android:key="@string/pref_key_smartlink_yanjin_fengliang"
            android:title="灶具调整到1档，油烟机风量不变"
             android:layout="@layout/preference_checkbox"/>
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:key="@string/pref_key_other_setting"
        android:title="其他设置"
         android:layout="@layout/preference_category">
        <Preference 
            android:key="@string/pref_key_other_yanji_check_safe"
            android:title="油烟机安全检查"
            android:layout="@layout/preference_arrow"/>
        <Preference 
            android:key="@string/pref_key_other_yanji_protect_record"
            android:title="油烟机维护记录"
            android:layout="@layout/preference_arrow"/>
        <CheckBoxPreference
            android:defaultValue="false" 
            android:key="@string/pref_key_other_yanji_someone_call"
            android:title="手机来电，油烟机风量降至1档大火降至中火"
             android:layout="@layout/preference_checkbox"/>
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:key="@string/pref_key_tips_and_share_setting"
        android:title="提示和分享"
         android:layout="@layout/preference_category">
        <CheckBoxPreference 
            android:key="@string/pref_key_tips_and_share_dinner"
            android:title="开饭提示触发选择"
             android:layout="@layout/preference_checkbox"/>
        <EditTextPreference 
            android:key="@string/pref_key_tips_and_share_dinner_content"
            android:title="开饭提示内容编辑"
            android:layout="@layout/preference_arrow"/>
        <CheckBoxPreference 
            android:key="@string/pref_key_tips_and_share_use_message"
            android:title="对方无app则使用短信"
             android:layout="@layout/preference_checkbox"/>
        <ListPreference 
            android:key="@string/pref_key_tips_and_share_close_fire"
            android:title="关火提醒"
            android:layout="@layout/preference_arrow"/>
    </PreferenceCategory>
</PreferenceScreen>
